Update environment configuration, enhance API security, and improve PDF signing process
- Removed quotes from BLOB_READ_WRITE_TOKEN in .env for consistency.
- Set VITE_API_URL in .env to point to the local development server.
- Added Node.js 18.x runtime specification for API functions in vercel.json.
- Implemented path validation in finalize.js to prevent unauthorized file access.
- Added API key validation in sign-pdf.js to enhance security.
- Introduced CSRF protection middleware in backend/index.js.
- Improved logging and error handling throughout the signing process.
- Updated frontend components to support new upload mode for signatures.

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 GMAIL_USER=jpdeveloperssoftwaretechnology@gmail.com
 GMAIL_PASS=kpwz mega vyao btlx
-BLOB_READ_WRITE_TOKEN="vercel_blob_rw_HePegez0gyY8GRwS_VS3T1DssMAoZctZriMRbjbmyX85vjl"
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_HePegez0gyY8GRwS_VS3T1DssMAoZctZriMRbjbmyX85vjl
 FRONTEND_URL=http://localhost:8080
-VITE_API_URL=
+VITE_API_URL=http://localhost:3000
 DATABASE_URL=postgres://neondb_owner:npg_cIXh26JjLvws@ep-orange-star-aensj8ao-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require
 VITE_ADMIN_API_KEY=api_a44ed8187b7eefb29518361d3e2eda69
 GEMINI_API_KEY=AIzaSyD_nR71zBzxTfhoqyoWSByDGRsbVXawfeI
