--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,10 +15,12 @@
     "@azure/storage-blob": "^12.28.0",
     "@vercel/blob": "^1.1.1",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
+    "helmet": "^7.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pdf-lib": "^1.17.1",
